# rust_projects

db/api/: .env  Cargo.toml
db/api/src/: db_pg.rs  handlers.rs  index.html  main.rs  utils.rs  webapi.rs
db/oracle/src/: main.rs
db/postgres/: Cargo.toml  docker-compose-postgres.yml  start_pg.sh
db/postgres/scripts/: create_seed_db.sh  ddoor_setup.sql  stats_db_setup.sql
db/postgres/src/: handlers.rs  main.rs  utils.rs
games/src/: main.rs
gui/src/: main.rs
hello_cargo/: Cargo.toml
hello_cargo/src/: main.rs
ocd_production/: Cargo.toml
ocd_production/src/: main.rs
parallel/: Cargo.toml
parallel/src/: main.rs
spa/: Cargo.toml
