[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
postgres = "0.19"
postgres-types = { version = "0.X.X", features = ["derive"] }
chrono="0.4"
regex = "1.5"
actix-web = "3.3.3"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
actix-rt = "1.1.1"
serde = { version = "1.0.123", features = ["derive"] }
ndarray = { version = "0.13", default-features = false }
ndarray-csv = "0.4"
csv = "1.1"
plotlib = "0.5.1"