[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
postgres = "0.19"
postgres-types = { version = "0.X.X", features = ["derive"] }
chrono="0.4"
regex = "1.5"
actix-web = "4.0.1"
actix-web-static-files = "4.0"
actix-files = "0.6.0"
static-files = "0.2.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
actix-rt = "2.7.0"
serde = { version = "1.0.123", features = ["derive"] }
ndarray = { version = "0.13", default-features = false }
ndarray-csv = "0.4"
csv = "1.1"
plotly = { version = "0.6.0", features = ["kaleido"] }
itertools-num = "0.1.3"
rand_distr = "0.4.3"
plotters = "0.3.1"
reqwest = { version = "0.11", features = ["blocking","json"] }
serde_json = "1.0.81"

[build-dependencies]
static-files = "0.2.1"